2007-02-08  Richard Dale  <rdale@foton.es>

	* Fixed bugs in the debug dump of QMetaObjects created at runtime
	* Normalized some code layout
	* Only QApplication and QCoreApplication destructors are now called

2007-02-07  Richard Dale  <rdale@foton.es>

	* Added a Debug.DebugChannel() method to get debug setting in C#

2007-02-06  Richard Dale  <rdale@foton.es>

	* Added a QPair struct corresponding to the C++ one, and generate
	  method calls with arguments that use it
	* Generate accessor methods for static variables and instance variables
	* Added the widgets/analogclock example
	* Fixed bug in marshalling QVector types with an unitialise variable in
	  a for loop
	* Added QMin() and QMax() methods
	* Added marshalling for StringBuilder <--> QStrings
	* Add a generically typed QDBusVariant.FromValue() method to make 
	  constructing them less ugly.
	* Use reflection via GetType() to find out whether a string or a 
	  StringBuilder needs to be marshalled to a QString

2007-02-05  Richard Dale  <rdale@foton.es>

	* Moved operator methods out of Qt.cs, and made them operator
	  methods in the classes of their arguments. In Qt.cs they
	  had to be translated to use names like op_mult() or op_add()
	  because C# only allows operator methods to be defined in the
	  class of one of their arguments. Now they are proper operator
	  methods which looks better.

2007-02-04  Richard Dale  <rdale@foton.es>

	* Updated the project TODO list
	* Added a a Qyoto Debug class for turning on debugging options
	  Example usage:

		Debug.SetDebug(QtDebugChannel.QTDB_VIRTUAL);

	  This will show the virtual method callbacks from the Smoke lib
	* Removed core/QGlobalSpace.cs as it isn't needed because the methods in 
	  it are in Qt.cs
	* The 'operator<<' and 'operator>>' methods are no longer renamed 
	  'op_write' and 'op_read', but 'Write' and 'Read' instead.
	* Started to implement QObject.FindChild() and QObject.FindChildren(),
	  but the code needs to be translated from QtRuby.